versao final sem bonus

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
     <div class="enviar-mensagens">
         <input class="caixa-texto" type="text" value="" placeholder="Escreva aqui...">
-        <img class="enviar" src="./imagens/enviar.png" />
+        <img class="enviar" onclick="enviarMensagem()" src="./imagens/enviar.png" />
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="script.js"></script>
